--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ if (!doNotTrack) {
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 text-center">
-        <h2 class="section-title">我們憂「心」的理由</h2>
+        <h2 class="section-title">我們憂「心」的理由 🥺</h2>
       </div>
       
       <div class="col-md-4 col-sm-6 mb-4">
