--- a/de/pricing/index.html
+++ b/de/pricing/index.html
@@ -36,12 +36,12 @@
 
 
 <!-- Open Graph image and Twitter Card metadata -->
-<meta property="og:image" content="http://errkhealth.com/images/ERRK_logo.png" />
-  <meta name="twitter:image" content="http://errkhealth.com/images/ERRK_logo.png"/>
+<meta property="og:image" content="http://errkhealth.com/images/preview.jpeg" />
+  <meta name="twitter:image" content="http://errkhealth.com/images/preview.jpeg"/>
       <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:image:width" content="1430">
-    <meta property="og:image:height" content="480">
-    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1920">
+    <meta property="og:image:height" content="1080">
+    <meta property="og:image:type" content="image/jpeg">
 <meta name="twitter:title" content="Preise"/>
 <meta name="twitter:description" content="Dies ist die Metabeschreibung"/>
 <meta property="og:title" content="Preise" />
