--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>http://errkhealth.com</title><link rel="canonical" href="http://errkhealth.com"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=http://errkhealth.com" /></head></html>
+<!DOCTYPE html><html><head><title>https://errkhealth.com</title><link rel="canonical" href="https://errkhealth.com"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://errkhealth.com" /></head></html>
